--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: "env use"
 
     - name: Install Poetry
       run: python -m pip install poetry
