--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 report_size = 1000
-report_dir = ./app/reports
-log_dir = ./app/log
+report_dir = /app/reports
+log_dir = /app/log
 app_log_filename =
 error_max_perc = 10
